--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
 	"private": true,
 	"dependencies": {
 		"axios": "^0.18.0",
+		"evergreen-ui": "^3.2.3",
 		"express": "^4.16.3",
+		"moment": "^2.22.2",
 		"npm": "^6.1.0",
 		"react": "^16.4.0",
 		"react-dom": "^16.4.0",
-		"react-scripts": "1.1.4"
+		"react-icons": "^2.2.7",
+		"react-scripts": "1.1.4",
+		"styled-components": "^3.3.3",
+		"styled-flex-component": "^2.2.2"
 	},
 	"proxy": "http://localhost:8080",
 	"scripts": {
