Added Post/Delete Entries

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,16 @@
 {
+	"name": "The Dog Feed",
 	"short_name": "Dog Feed",
-	"name": "The Dog Feed - Fullstack App",
+	"lang": "en-US",
+	"start_url": "/",
+	"display": "standalone",
+	"theme_color": "#016cd1",
+	"background_color": "#ffffff",
 	"icons": [
 		{
-			"src": "favicon.ico",
-			"sizes": "64x64 32x32 24x24 16x16",
-			"type": "image/x-icon"
+			"src": "icon.png",
+			"sizes": "192x192",
+			"type": "image/png"
 		}
-	],
-	"start_url": "./index.html",
-	"display": "standalone",
-	"theme_color": "#000000",
-	"background_color": "#ffffff"
+	]
 }
