--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"react": "^16.4.0",
 		"react-dom": "^16.4.0",
 		"react-icons": "^2.2.7",
+		"react-pose": "^2.1.2",
 		"react-scripts": "1.1.4",
 		"styled-components": "^3.3.3",
 		"styled-flex-component": "^2.2.2"
