--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
 	"private": true,
 	"dependencies": {
 		"axios": "^0.18.0",
+		"bcrypt": "^3.0.0",
 		"body-parser": "^1.18.3",
 		"evergreen-ui": "^3.2.3",
 		"express": "^4.16.3",
+		"jsonwebtoken": "^8.3.0",
 		"moment": "^2.22.2",
 		"mongoose": "^5.2.1",
 		"npm": "^6.1.0",
+		"popmotion": "^8.3.3",
 		"react": "^16.4.0",
 		"react-dom": "^16.4.0",
 		"react-icons": "^2.2.7",
