--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
 		"body-parser": "^1.18.3",
 		"evergreen-ui": "^3.2.3",
 		"express": "^4.16.3",
+		"js-md5": "^0.7.3",
 		"jsonwebtoken": "^8.3.0",
+		"lodash": "^4.17.10",
 		"moment": "^2.22.2",
 		"mongoose": "^5.2.1",
 		"npm": "^6.1.0",
@@ -18,6 +20,7 @@
 		"react-icons": "^2.2.7",
 		"react-pose": "^2.1.2",
 		"react-scripts": "1.1.4",
+		"react-time-range": "^1.0.2",
 		"styled-components": "^3.3.3",
 		"styled-flex-component": "^2.2.2"
 	},
