--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"axios": "^0.18.0",
 		"bcrypt": "^3.0.0",
 		"body-parser": "^1.18.3",
+		"config": "^1.31.0",
 		"evergreen-ui": "^3.2.3",
 		"express": "^4.16.3",
 		"js-md5": "^0.7.3",
@@ -32,7 +33,8 @@
 		"test": "react-scripts test --env=jsdom",
 		"eject": "react-scripts eject",
 		"server": "nodemon lib/server.js --ignore src/",
-		"seeds": "node lib/seeds/index.js"
+		"seeds": "node lib/seeds/index.js",
+		"heroku-postbuild": "cd src && npm install --only=dev && npm install && npm run build"
 	},
 	"devDependencies": {
 		"concurrently": "^3.5.1",
