--- a/package.json
+++ b/package.json
@@ -1,14 +1,29 @@
 {
-	"name": "react-express-boilerplate",
+	"name": "the-dog-feed",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
 		"axios": "^0.18.0",
+		"bcrypt": "^3.0.0",
+		"body-parser": "^1.18.3",
+		"config": "^1.31.0",
+		"evergreen-ui": "^3.2.3",
 		"express": "^4.16.3",
+		"js-md5": "^0.7.3",
+		"jsonwebtoken": "^8.3.0",
+		"lodash": "^4.17.10",
+		"moment": "^2.22.2",
+		"mongoose": "^5.2.1",
 		"npm": "^6.1.0",
+		"popmotion": "^8.3.3",
 		"react": "^16.4.0",
 		"react-dom": "^16.4.0",
-		"react-scripts": "1.1.4"
+		"react-icons": "^2.2.7",
+		"react-pose": "^2.1.2",
+		"react-scripts": "1.1.4",
+		"react-time-range": "^1.0.2",
+		"styled-components": "^3.3.3",
+		"styled-flex-component": "^2.2.2"
 	},
 	"engines": {
 		"node": "10.0.0"
@@ -21,6 +36,7 @@
 		"test": "react-scripts test --env=jsdom",
 		"eject": "react-scripts eject",
 		"server": "nodemon lib/server.js --ignore src/",
+		"seeds": "node lib/seeds/index.js",
 		"heroku-postbuild": "cd src && npm install --only=dev && npm install && npm run build"
 	},
 	"devDependencies": {
