--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"body-parser": "^1.18.3",
 		"config": "^1.31.0",
 		"evergreen-ui": "^3.2.3",
+		"exponent-server-sdk": "^2.3.1",
 		"express": "^4.16.3",
 		"js-md5": "^0.7.3",
 		"jsonwebtoken": "^8.3.0",
