--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"lodash": "^4.17.10",
 		"moment": "^2.22.2",
 		"mongoose": "^5.2.1",
+		"nodemon": "^1.17.5",
 		"npm": "^6.1.0",
 		"popmotion": "^8.3.3",
 		"react": "^16.4.0",
@@ -41,7 +42,6 @@
 		"heroku-postbuild": "cd src && yarn --only=dev && yarn && yarn build"
 	},
 	"devDependencies": {
-		"concurrently": "^3.5.1",
-		"nodemon": "^1.17.5"
+		"concurrently": "^3.5.1"
 	}
 }
