--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"lodash": "^4.17.10",
 		"moment": "^2.22.2",
 		"mongoose": "^5.2.1",
+		"node-cron": "^1.2.1",
 		"nodemon": "^1.17.5",
 		"npm": "^6.1.0",
 		"popmotion": "^8.3.3",
